amélioration de l'accessibilité et correction demandée par Domi

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,3 +4,7 @@ RewriteRule ^(.*) - [E=BASE_URI:%1]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ index.php [QSA,L]
+
+<FilesMatch "\.(css|scss|webp|js|png|jpg|jpeg|gif|svg)$">
+    Header set Cache-Control "max-age=604800, must-revalidate"
+</FilesMatch>
